--- a/templates/climbguide/pointofinterest_detail.html
+++ b/templates/climbguide/pointofinterest_detail.html
@@ -11,7 +11,7 @@
 {% for photo in photos %}
 <img src="{{ photo.photo_thumb.url }}"/>
 {% empty %}
-<div>This point of interest has no photos yet. Add some!</div><br>
+<img src="https://images.unsplash.com/photo-1527594488302-1c63bc6490b6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80"/>
 {% endfor %}
 <div>
     {{ pointofinterest.get_category_display }}<br>
