--- a/templates/home.html
+++ b/templates/home.html
@@ -103,7 +103,7 @@ document.addEventListener("DOMContentLoaded", (e) => {
         let poi = poi_info[i]
         console.log(poi.name)
         var html =  `<article class="hide-child relative ba b--black-20 mw5 center">
-                <img src="" class="db" alt="Photo of Route" />
+                <img src="${poi.photo}" class="db" alt="Photo of a point of interest" />
                 <div class="pa2 bt b--black-20">
                 <p class="f6 dark-blue mv1">${poi.name}</p>
                 <p class="f6 gray mv1">${poi.category}</p>
@@ -133,7 +133,7 @@ document.addEventListener("DOMContentLoaded", (e) => {
         longitudeList.push(route.longitude)
         console.log(route.name)
         var html =  `<article class="hide-child relative ba b--black-20 mw5 center">
-                <img src="https://images.unsplash.com/photo-1578763397601-ad069af37f14?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1056&q=80">
+                <img src=${route.photo} class="db" alt="Photo of a route">
                 <div class="pa2 bt b--black-20">
                 <p class="f6 dark-blue mv1">${route.name}</p>
                 <p class="f6 gray mv1">${route.route_type} | ${route.rating}</p>
