--- a/static/css/style.css
+++ b/static/css/style.css
@@ -37,15 +37,20 @@
     border-color: rgba(0, 0, 0, .2);
     padding: .5rem;
     margin-bottom: .5rem;
+    
 }
 
 #map {
     border-style: double;
     border-color: black;
     border-width: thick;
+    margin-right: auto!important;
+    margin-left: auto!important;
+    max-width: 80%!important;
+
 }
 
 #content {
-    max-width: 500px;
+    max-width: 800px;
     margin: auto;
 }
