--- a/templates/users/profile.html
+++ b/templates/users/profile.html
@@ -2,28 +2,11 @@
 
 {% block content %}
 {% if user.is_authenticated %}
-    <h2>{{ user }}</h2>
-    {% if user.photo %}
-        <div><img src="{{ user.photo_thumb.url }}"/></div><br>
-    {% else %}
-        <div>No photo has been uploaded</div>
-    {% endif %}
-    <div>{{ user.bio }}</div>
-    <div>
-        <a href="{% url 'socialaccount_connections' %}"><button class="f6 grow no-underline br-pill ph3 pv2 mb2 dib white bg-dark-green" href="#0"type="submit">Manage Social Accounts</button></a>
-        <button class="f6 grow no-underline br-pill ph3 pv2 mb2 dib white bg-dark-green" type="submit" id="button-one">Edit User Info</button>
-    </div>
-    <div>
-        <button class="f6 grow no-underline br-pill ph3 pv2 mb2 dib white bg-dark-green" type="submit" id="button-two">Add Trip</button>
-        <button class="f6 grow no-underline br-pill ph3 pv2 mb2 dib white bg-dark-green" type="submit" id="button-three">Add Point of Interest</button>
-    </div>
-    <div id="form-one" class="hidden">
-        <form action ="{% url 'profile' %}" method="POST" enctype="multipart/form-data">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <button class="f6 grow no-underline br-pill ph3 pv2 mb2 dib white bg-dark-green" type="submit">Update Profile</button>
-        </form>
-    </div>
+<p class="f4 bold center mw5">
+    <button class="f6 grow no-underline br-pill ph3 pv2 mb2 dib white bg-dark-green" type="submit" id="button-two">Add Trip</button>
+    <button class="f6 grow no-underline br-pill ph3 pv2 mb2 dib white bg-dark-green" type="submit" id="button-three">Add Point of Interest</button>
+</p>
+<div>
     <div id="form-two" class="hidden">
         <form class="form-style" action ="{% url 'add_daytrip' %}" method="POST">
             {% csrf_token %}
@@ -38,21 +21,46 @@
             <button class="f6 grow no-underline br-pill ph3 pv2 mb2 dib white bg-dark-green" type="submit">Add Point of Interest</button>
         </form>
     </div>
-    <h3 class="f4 bold center mw5"> My Trips</h3>
-    <section class="cf w-100 pa2-ns">
-        {% for daytrip in daytrips %}
+</div>
+
+<div class="flex-container">
+    <div class="flex-column">
+        <h2 class="f4 bold center mw5">{{ user }}</h2>
+        {% if user.photo %}
+            <div class="f4 bold center mw5"><img src="{{ user.photo_thumb.url }}"/></div><br>
+        {% else %}
+        <div><img src="https://images.unsplash.com/photo-1558537112-ed307f81124c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80"/></div><br>
+        {% endif %}
+        <p class="f4 bold center mw5">{{ user.bio }}</p>
+        <button class="f6 grow no-underline br-pill ph3 pv2 mb2 dib white bg-dark-green" type="submit" id="button-one">Edit User Info</button>
+        <div id="form-one" class="hidden">
+            <form action ="{% url 'profile' %}" method="POST" enctype="multipart/form-data">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button class="f6 grow no-underline br-pill ph3 pv2 mb2 dib white bg-dark-green" type="submit">Update Profile</button>
+                <a href="{% url 'socialaccount_connections' %}"><button class="f6 grow no-underline br-pill ph3 pv2 mb2 dib white bg-dark-green">Manage Social Accounts</button></a>
+            </form>
+        </div>
+    </div>
+    <div class="flex-column">
+        <h3 class="f4 bold center mw5"> My Trips</h3>
+        <section class="cf w-100 pa2-ns">
+            {% for daytrip in daytrips %}
             <article class="fl w-100 w-50-m  w-25-ns pa2-ns">
                 <a href="{% url 'daytrip_detail' daytrip_pk=daytrip.pk %}" class="ph2 ph0-ns pb3 link db">
                     <h3 class="f5 f4-ns mb0 black-90">{{ daytrip.title }}</h3>
                     <h3 class="f6 f5 fw4 mt2 black-60">{{ daytrip.date }}</h3>
                 </a>
             </article>
-        {% empty %}
-        <article class="fl w-100 w-50-m  w-25-ns pa2-ns">
-            <h3 class="f5 f4-ns mb0 black-90">No trips planned yet!</h3>
-        </article>
-        {% endfor %}
-    </section>
+            {% empty %}
+            <article class="fl w-100 w-50-m  w-25-ns pa2-ns">
+                <h3 class="f5 f4-ns mb0 black-90">No trips planned yet!</h3>
+            </article>
+            {% endfor %}
+        </section>
+
+    </div>
+</div>    
 {% else %}
     <p>You are not logged in</p>
     <a href="{% url 'account_login' %}">Login Here</a>
