--- a/templates/climbguide/edit_daytrip.html
+++ b/templates/climbguide/edit_daytrip.html
@@ -25,7 +25,7 @@
 <div>
     <form class="form-style" action="{% url 'edit_daytrip' daytrip_pk=daytrip.pk %}" method="GET">
         <div>
-            <label for="id_location">Route Location</label> <input type="search" name="location" required id="id_location" value="{{ location_q }}" placeholder="Search Climing Areas">
+            <label for="id_location">Route Location</label> <input type="search" name="location" required id="id_location" value="{{ location_q }}" placeholder="Search Climbing Areas">
         </div>
         <div>
             <label for="id_route_type">Route Type</label> <select name="route_type" id="id_route_type" value="{{ route_type_q }}">
@@ -191,9 +191,18 @@ document.addEventListener("DOMContentLoaded", (e) => {
             closeOnClick: false
         }).setHTML(html);
 
-        let color = "green"
+        route.color = "green"
+        for (let item of plannedRoutesContainer.querySelectorAll("#plannedRoute")) {
+            let plannedPk = item.dataset.routeid
+            if (route.pk == plannedPk) {
+                console.log("here")
+                route.color = "red"
+            } else {
+                console.log("actually I'm here")
+            }
+        }
         var marker = new mapboxgl.Marker(
-            {color: color}
+            {color: route.color}
         )
             .setLngLat([route.longitude, route.latitude])
             .setPopup(customPopUp)
