--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,4 +1,4 @@
-{% extends "account/base.html" %}
+{% extends "base.html" %}
 
 {% load i18n %}
 {% load account socialaccount %}
@@ -7,6 +7,7 @@
 
 {% block content %}
 
+<div class="accounts">
 <h1>{% trans "Sign In" %}</h1>
 
 {% get_providers as socialaccount_providers %}
@@ -40,7 +41,7 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
   <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-  <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
+  <button class="f6 grow no-underline br-pill ph3 pv2 mb2 dib white bg-dark-green" href=#0 class="primaryAction" type="submit">{% trans "Sign In" %}</button>
 </form>
-
+</div>
 {% endblock %}
