--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,6 +17,24 @@
     padding: 10px;
 }
 
+#profile-column-left {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 0;
+    flex-shrink: 0;
+    flex-basis: 25%;
+    padding: 10px;
+}
+
+#profile-column-right {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 0;
+    flex-shrink: 0;
+    flex-basis: 75%;
+    padding: 10px;
+}
+
 .form-style {
     font-family: inherit;
     color: rgba(0, 0, 0, .8);
@@ -53,4 +71,8 @@
 #content {
     max-width: 800px;
     margin: auto;
+}
+
+.center-form {
+    text-align: center;
 }
