--- a/templates/users/profile.html
+++ b/templates/users/profile.html
@@ -24,10 +24,10 @@
 </div>
 
 <div class="flex-container">
-    <div class="flex-column">
-        <h2 class="f4 bold center mw5">{{ user }}</h2>
+    <div id="profile-column-left">
+        <h2 class="f5 f4-ns center mb0 black-90">{{ user }}</h2>
         {% if user.photo %}
-            <div class="f4 bold center mw5"><img src="{{ user.photo_thumb.url }}"/></div><br>
+            <img src="{{ user.photo_thumb.url }}" class="br-100 pa1 ba b--black-10" alt="avatar"/>
         {% else %}
         <div><img src="https://images.unsplash.com/photo-1558537112-ed307f81124c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80"/></div><br>
         {% endif %}
@@ -42,14 +42,15 @@
             </form>
         </div>
     </div>
-    <div class="flex-column">
-        <h3 class="f4 bold center mw5"> My Trips</h3>
+    <div id="profile-column-right">
+        <h3 class="f5 f4-ns center mb0 black-90"> My Trips</h3>
         <section class="cf w-100 pa2-ns">
             {% for daytrip in daytrips %}
-            <article class="fl w-100 w-50-m  w-25-ns pa2-ns">
+            <article class="fl w-100 w-50-m ba w-25-ns pa3-ns">
                 <a href="{% url 'daytrip_detail' daytrip_pk=daytrip.pk %}" class="ph2 ph0-ns pb3 link db">
                     <h3 class="f5 f4-ns mb0 black-90">{{ daytrip.title }}</h3>
                     <h3 class="f6 f5 fw4 mt2 black-60">{{ daytrip.date }}</h3>
+                    <h3 class="f6 f5 fw4 mt2 black-60">{{ daytrip.num_routes }} Routes</h3>
                 </a>
             </article>
             {% empty %}
