styling updates and bug fixes

--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -5,7 +5,7 @@
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
 {% block content %}
-<div class="accounts">
+<div class="center-form">
 <h1>{% trans "Sign Out" %}</h1>
 
 <p><b>{% trans 'Are you sure you want to sign out?' %}</b></p>
