--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
 </head>
 <div id="content">
 <header class="bg-white black-80 tc pv4 avenir">
-    <a class="link black-80" href="">
+    <a class="link black-80" href="{% url 'home' %}">
     <h1 class="mt2 mb0 baskerville i fw1 f1">ClimbGuide</h1>
     <h2 class="mt2 mb0 f6 fw4 ttu tracked">The Pocket Guide to help you Climb</h2>
     </a>
