--- a/templates/climbguide/edit_daytrip.html
+++ b/templates/climbguide/edit_daytrip.html
@@ -94,7 +94,7 @@
                 <li class="ph3 pv2 bb b--light-silver">No routes planned yet!</li>
                 {% endfor %}
             </ul>
-        <div class="center"><button class="f6 grow no-underline br-pill ph3 pv2 mb2 dib white bg-dark-green" type="submit" id="send-routes-button">Sumbit New Route List</button></div>
+        <div class="center"><button class="f6 grow no-underline br-pill ph3 pv2 mb2 dib white bg-dark-green" type="submit" id="send-routes-button">Submit New Route List</button></div>
     </div>  
 </div>
 
@@ -113,7 +113,7 @@ var maxLatitude
 mapboxgl.accessToken = '{{mapbox_access_token}}';
 var map = new mapboxgl.Map({
     container: 'map',
-    style: 'mapbox://styles/mapbox/streets-v11',
+    style: 'mapbox://styles/belongarobert/ckgst20nd1x2k19l67uabg18l',
     center: [-80.793457, 35.782169],
     zoom: 4,
 })
