--- a/templates/climbguide/daytrip_detail.html
+++ b/templates/climbguide/daytrip_detail.html
@@ -19,10 +19,10 @@
     <div class="flex-column">
         <h3 class="f4 bold center mw5">Planned Routes</h3>
         <ul class="list pl0 ml0 center mw5 ba b--light-silver br3">
-        {% for route in routes %}
-            <li class="ph3 pv2 bb b--light-silver">{{ route.name }} | {{ route.route_type }} | {{ route.rating }}</li>
+            {% for route in routes %}
+            <a href="{% url 'route_detail' route_pk=route.pk %}" class="link black"><li class="ph3 pv2 bb b--light-silver">{{ route.name }} | {{ route.route_type }} | {{ route.rating }}</li></a>
         {% empty %}
-            <a href="{% url 'edit_daytrip' daytrip_pk=daytrip.pk %}"><li class="ph3 pv2 bb b--light-silver">Add Routes</li></a>
+            <li class="ph3 pv2 bb b--light-silver">Sorry, no routes are available for that search.</li>
         {% endfor %}
         </ul>
     </div>
@@ -63,7 +63,7 @@
     mapboxgl.accessToken = '{{mapbox_access_token}}';
     const map = new mapboxgl.Map({
         container: 'map',
-        style: 'mapbox://styles/mapbox/streets-v11',
+        style: 'mapbox://styles/belongarobert/ckgst20nd1x2k19l67uabg18l',
         center: [-80.793457, 35.782169],
         zoom: 4,
     })
