--- a/static/css/style.css
+++ b/static/css/style.css
@@ -58,6 +58,29 @@
     
 }
 
+.form-style-two {
+    font-family: inherit;
+    color: rgba(0, 0, 0, .8);
+}
+
+.form-style-two label {
+    font-size: .875rem;
+    font-weight: bold;
+    margin-bottom: .5rem;  
+    display: block;  
+}
+
+.form-style-two input[type=text], .form-style input[type=search] input[type=file] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    border-style: solid;
+    border-width: 1px;
+    border-color: rgba(0, 0, 0, .2);
+    padding: .5rem;
+    margin-bottom: .5rem;
+    
+}
+
 #map {
     border-style: double;
     border-color: black;
