--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -18,7 +18,7 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
 
 <div class="socialaccount_ballot">
 
-  <ul class="socialaccount_providers list">
+  <ul class="socialaccount_providers list pl0 ml0 center mw5">
     {% include "socialaccount/snippets/provider_list.html" with process="login" %}
   </ul>
 
