--- a/templates/climbguide/edit_daytrip.html
+++ b/templates/climbguide/edit_daytrip.html
@@ -91,7 +91,7 @@
                     {{ route.name }} | {{ route.route_type }} | {{ route.rating }}
                 </li>
                 {% empty %}
-                <li class="ph3 pv2 bb b--light-silver">No routes planned yet!</li>
+                <li id="empty" class="ph3 pv2 bb b--light-silver">No routes planned yet!</li>
                 {% endfor %}
             </ul>
         <div class="center"><button class="f6 grow no-underline br-pill ph3 pv2 mb2 dib white bg-dark-green" type="submit" id="send-routes-button">Submit New Route List</button></div>
@@ -238,6 +238,9 @@ dragula([
     if (target === document.querySelector("#container2")) {
         el.id = "plannedRoute"
         console.log("route id set to planned")
+        if (document.querySelector("#empty")) {
+                document.querySelector("#empty").classList.add("hidden")
+            }
     }
 })
 
@@ -306,6 +309,9 @@ mapBox.addEventListener("DOMNodeInserted", function(event) {
                     console.log(`We are both ${pk}`)
                     item.id = "plannedRoute"
                     document.querySelector("#container2").appendChild(item)
+                    if (document.querySelector("#empty")) {
+                        document.querySelector("#empty").classList.add("hidden")
+                    }
                     appended = true
                     console.log(appended)
                 }
