--- a/templates/climbguide/edit_daytrip.html
+++ b/templates/climbguide/edit_daytrip.html
@@ -275,15 +275,19 @@ var makeRouteObject = function (route) {
         route_pk: route.pk,
     }
 }
+
+const user_token = "{{token}}"
+
 var sendRoutePks = function (jsonObj) {
     const daytrip_pk = container2.dataset.daytripid
-    const url = `/daytrips/detail/${daytrip_pk}/addroutes/`
+    const url = `/api/daytrips/${daytrip_pk}/updateroutes/`
     fetch(url, {
         method: "POST",
         body: JSON.stringify(jsonObj),
         headers: {
             'Content-Type': 'application/json; charset=UTF-8',
-            'Accept': 'application/json; charset=UTF-8'
+            'Accept': 'application/json; charset=UTF-8',
+            'Authorization': `Token ${user_token}`
         }
     })
     .then(res => res.json())
